
MAINTAINERCLEANFILES = Makefile.in

lib_LTLIBRARIES = libXCBICCCM.la

xcbinclude_HEADERS = xcb_icccm.h

AM_CFLAGS = $(CWARNFLAGS)

libXCBICCCM_la_SOURCES = icccm.c
libXCBICCCM_la_CFLAGS = $(XCB_CFLAGS) $(XCB_ATOM_CFLAGS) $(XCB_EVENT_CFLAGS) \
	$(XCB_PROPERTY_CFLAGS)
libXCBICCCM_la_LIBADD = $(XCB_LIBS) $(XCB_ATOM_LIBS) $(XCB_PROPERTY_LIBS)

pkgconfig_DATA = xcb-icccm.pc

EXTRA_DIST = xcb-icccm.pc.in
